feat: allow multiple comma-separated frontend URLs in CORS configuration