@@ -7,6 +7,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -20,10 +21,9 @@ public class CorsConfig {
 
                 CorsConfiguration config = new CorsConfiguration();
 
-                config.setAllowedOrigins(List.of(
-                                // "http://localhost:3000",
-                                // "http://localhost:5173",
-                                frontendUrl));
+                // Parse the comma-separated or single URL
+                List<String> allowedOrigins = Arrays.asList(frontendUrl.split(","));
+                config.setAllowedOrigins(allowedOrigins);
 
                 config.setAllowedMethods(List.of(
                                 "GET", "POST", "PUT",
